# noted

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
apps/noted-desktop/: index.html  package-lock.json  package.json
apps/noted-desktop/src/: main.ts  styles.css
apps/noted-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/noted-desktop/src-tauri/capabilities/: default.json
apps/noted-desktop/src-tauri/icons/: icon.icns
apps/noted-desktop/src-tauri/src/: lib.rs  main.rs
crates/noted-cli/: Cargo.toml
crates/noted-cli/src/: main.rs
crates/noted-core/: Cargo.toml
crates/noted-core/src/: config.rs  index.rs  lib.rs  markdown.rs  search.rs
prototypes/editor-live-preview/: README.md  index.html  package-lock.json  package.json
prototypes/editor-live-preview/src/: main.ts  styles.css
