[package]
name = "noted-desktop"
version = "0.0.0-source"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "noted_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "noted-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
